src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
@import '../../../../../styles.scss';

:host {
  form {
    grid-template-rows: auto max-content max-content auto max-content auto;
    grid-template-columns: auto;
    grid-template-areas:
      'description'
      'countryTelephoneCode'
      'mobileNumber'
      'submitNumber'
      'verification'
      'actions';

    #countryTelephoneCode {
      grid-area: countryTelephoneCode;
    }

    #mobileNumber {
      grid-area: mobileNumber;
    }

    #submitNumberButtonContainer {
      grid-area: submitNumber;

      margin: 5px 0;

      button {
        width: 100%;
      }
    }

    #code {
      grid-area: verification;

      .mat-form-field {
        width: 100%;
      }
    }

    .hidden {
      visibility: hidden;
      opacity: 0;
    }
  }
}

@media screen and (min-width: $break-mobile) {
  :host {
    form {
      grid-template-rows: auto max-content auto max-content auto;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-areas:
        'description description description'
        'countryTelephoneCode mobileNumber mobileNumber'
        'submitNumber submitNumber submitNumber'
        '. verification .'
        'actions actions actions';
    }
  }
}

@media screen and (min-width: $break-narrow-tablet) {
  :host {
    form {
      grid-template-rows: auto max-content auto max-content auto;
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
      grid-template-areas:
        'description description description description description'
        '. countryTelephoneCode mobileNumber mobileNumber .'
        '. submitNumber submitNumber submitNumber .'
        '. verification verification verification .'
        '. . actions actions actions';
    }
  }
}

